[tool.poetry]
name = "cli"
version = "0.0.1"
description = "CLI toy project to learn about typer"
authors = ["Peter Labus <plabus@nvidia.com>"]
license = "LICENSE.txt"
readme = "README.md"

[tool.poetry.scripts]
cli = "cli.main:app"

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.6.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
